[package]
name = "day14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
array2d = "0.3.1"
num = "0.4.1"
num-traits = "0.2.17"
num-derive = "0.4.1"
strum = "0.25"
strum_macros = "0.25"
